Fix contrast

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -2,7 +2,7 @@
   display: flex ;
   align-items: center;
   flex-direction: column;
-  background-color:  #6070FF;
+  background-color:  #7f8cff;
   color: white;
 }
 
